--- a/plugin.xml
+++ b/plugin.xml
@@ -5,6 +5,7 @@
   found in the LICENSE file.
 -->
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     id="org.chromium.identity"
     version="1.0.1">
   <engines>
